SERVER-58399 Fix serialization logic for 'errInfo' field produced by DocumentValidationError